Fixed friend's name to not jump when hover by using opacity, cleaned up front end code

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,3 +1,6 @@
+/* Globally 
+---------------------- */
+
 .navbar-logo {
   width: 20px;
   height: 20px;
@@ -19,11 +22,6 @@
   width: 300px;
   object-fit: cover;
   object-position: center;
-}
-
-iframe {
-  height: 210px;
-  width: 350px;
 }
 
 .map-icon {
@@ -70,10 +68,10 @@ iframe {
 }
 
 .friend-name {
-  display: none;
+  opacity: 0;
 }
 
-/* logos
+/* Logos
 ------------------------------ */
 
 .logo1 {
@@ -84,6 +82,14 @@ iframe {
 .logo2 {
   width: 40px;
   height: 35px
+}
+
+/* Media Section
+--------------------------- */
+
+iframe {
+  height: 210px;
+  width: 350px;
 }
 
 /* Media Queries
